service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shivani-portfolio
  namespace: portfolio
spec:
  selector:
    app: shivani-portfolio
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
