ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shivani-portfolio-ingress
  namespace: portfolio
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: portfolio.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shivani-portfolio
            port:
              number: 80
